--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,19 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Sistemas de pedidos</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <img src="assets/imgs/tela-inicial.png" alt="logo">
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <form action="">
+    <ion-item>
+      <ion-label floating>Email</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>Senha</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+    <button ion-button round solid block>Entrar</button>
+  </form>
+  <button ion-button round outline block>Registrar</button>
 </ion-content>
