--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
       <ion-label floating>Senha</ion-label>
       <ion-input type="password"></ion-input>
     </ion-item>
-    <button ion-button round solid block>Entrar</button>
+    <button ion-button round solid block (click) = "login()">Entrar</button>
   </form>
   <button ion-button round outline block>Registrar</button>
 </ion-content>
