--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -13,7 +13,7 @@
   <ion-list>
     <button ion-item *ngFor="let item of items">
       <ion-thumbnail>
-        <img src="{{bucketUrl}}cat{{item.id}}.jpg">
+        <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
       </ion-thumbnail>
       <h2>{{item.nome}}</h2>
     </button>
