Criando página de registro

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,5 +15,5 @@
     </ion-item>
     <button ion-button round solid block (click) = "login()">Entrar</button>
   </form>
-  <button ion-button round outline block>Registrar</button>
+  <button ion-button round outline block (click)= "signup()">Registrar</button>
 </ion-content>
