--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -11,7 +11,7 @@
 <ion-content padding>
 
   <ion-list>
-    <button  ion-item *ngFor="let item of items" (click)="showProdutos()">
+    <button  ion-item *ngFor="let item of items" (click)="showProdutos(item.id)">
       <ion-thumbnail>
         <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
       </ion-thumbnail>
