--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Signup</ion-title>
+    <ion-title>Registro</ion-title>
   </ion-navbar>
 </ion-header>
 
