--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -9,9 +9,13 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-fab top right edge>
+    <button navPush="CartPage" ion-fab mini>
+      <ion-icon name="cart"></ion-icon>
+    </button>
+  </ion-fab>
   <ion-list>
-    <button  ion-item *ngFor="let item of items" (click)="showProdutos(item.id)">
+    <button ion-item *ngFor="let item of items" (click)="showProdutos(item.id)">
       <ion-thumbnail>
         <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
       </ion-thumbnail>
