--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -9,12 +9,17 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-fab top right edge>
+    <button navPush="CartPage" ion-fab mini>
+      <ion-icon name="cart"></ion-icon>
+    </button>
+  </ion-fab>
   <ion-card>
-    <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'"/>
+    <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'" />
     <ion-card-content>
       <ion-card-title>
         {{item?.nome}}
-        </ion-card-title>
+      </ion-card-title>
       <p>
         {{item?.preco | currency}}
       </p>
