--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -30,4 +30,5 @@
     </ion-item>
   </ion-list>
   <button ion-button block (click)="goOn()">Continuar comprando</button>
+  <button ion-button block color="secondary" (click)="checkOut()">Finalizar pedido</button>
 </ion-content>
