--- a/src/pages/pick-address/pick-address.html
+++ b/src/pages/pick-address/pick-address.html
@@ -5,14 +5,14 @@
       <ion-icon name="menu"></ion-icon>
     </button>
 
-    <ion-title>Endereços</ion-title>
+    <ion-title>Fechamento de pedido</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <ion-list>
     <ion-list-header>
-      Selecione um endereço.
+      Selecione um endereço
     </ion-list-header>
     <button ion-item *ngFor="let item of items">
         <h2>{{item.logradouro}}, {{item.numero}}</h2>
