--- a/src/pages/pick-address/pick-address.html
+++ b/src/pages/pick-address/pick-address.html
@@ -14,7 +14,7 @@
     <ion-list-header>
       Selecione um endereço
     </ion-list-header>
-    <button ion-item *ngFor="let item of items">
+    <button ion-item *ngFor="let item of items" (click)="nextPage(item)">
         <h2>{{item.logradouro}}, {{item.numero}}</h2>
         <h2>{{item.complemento}}, {{item.bairro}} CEP {{item.cep}}</h2>
         <h2>{{item.cidade.nome}}, {{item.cidade.estado.nome}}</h2>
